Fixed informative text alignment

--- a/component/styles/forms.scss
+++ b/component/styles/forms.scss
@@ -224,7 +224,7 @@ input:focus:-moz-placeholder {
 .informative {
   display: inline-block;
   width: $input_width;
-  padding: .85em 0;
+  padding: .75em 0;
   line-height: 1.3;
   font-size: 100%;
   color: $readonly_text_color;
